Check SUBREG in prepare_call_arguments.

2011-03-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR debug/48160
	* var-tracking.c (prepare_call_arguments): Check SUBREG.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@171108 138bc75d-0d04-0410-961f-82ee72b054a4